5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1575_994.log
== TEST (2019-03-12 11:20:50) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:21:12) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.165363
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:41) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.146665
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:44) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.132431
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:46) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.107073
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:47) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.136622
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:47) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.112406
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:23:48) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:49) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.152184
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:50) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.145014
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:50) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.223968
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.234247
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.351495
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/994/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.396689
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.50204
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/994/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.514999
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.382779
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/994/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.368304
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/994/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:23:51) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.256897
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1575/994/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:35:23) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.141163
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:34:15) 
-- CODE:
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:34:41) 
-- CODE:
print(Universidade Federal do Amazona)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazona)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:35:04) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.174232
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:35:25) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.177126
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:35:25) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.210384
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
